--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "node-starter",
+  "name": "node-utzmyx",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start":"node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
